# lcount

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  counter.rs  language.rs  main.rs  stats.rs  walker.rs
src/output/: csv.rs  json.rs  table.rs
tests/: integration.rs
