[package]
name = "cloc"
version = "0.1.0"
edition = "2021"
description = "Count blank, comment, and code lines per language"

[[bin]]
name = "cloc"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
walkdir     = "2"
ignore      = "0.4"
rayon       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
comfy-table = "7"

[dev-dependencies]
tempfile = "3"
