[package]
name = "lcount"
version = "0.1.0"
edition = "2021"
description = "Count blank, comment, and code lines per language — a fast cloc clone in Rust"
license = "MIT"
repository = "https://github.com/onmyway133/cloc"
homepage = "https://github.com/onmyway133/cloc"
documentation = "https://github.com/onmyway133/cloc"
readme = "README.md"
keywords = ["cloc", "lines-of-code", "cli", "source-code", "statistics"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "lcount"
path = "src/main.rs"

[dependencies]
clap        = { version = "4", features = ["derive"] }
walkdir     = "2"
ignore      = "0.4"
rayon       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
comfy-table = "7"

[dev-dependencies]
tempfile = "3"
